ravel57.grosze_bot_rs.640a529c92305c3a10d899e6002ed40e63e82980
Running as unit: run-p2536248-i15116354.scope; invocation ID: ba1666ce234745caab15355401e55c62
   Compiling proc-macro2 v1.0.95
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.174
   Compiling shlex v1.3.0
    Checking memchr v2.7.5
    Checking pin-project-lite v0.2.16
   Compiling serde v1.0.219
   Compiling autocfg v1.5.0
   Compiling cc v1.2.29
    Checking futures-core v0.3.31
    Checking stable_deref_trait v1.2.0
    Checking bytes v1.10.1
    Checking futures-sink v0.3.31
    Checking itoa v1.0.15
    Checking futures-channel v0.3.31
    Checking slab v0.4.10
    Checking futures-io v0.3.31
    Checking futures-task v0.3.31
   Compiling pkg-config v0.3.32
    Checking pin-utils v0.1.0
   Compiling vcpkg v0.2.15
   Compiling quote v1.0.40
    Checking socket2 v0.5.10
    Checking mio v1.0.4
   Compiling syn v2.0.104
    Checking signal-hook-registry v1.4.5
   Compiling fnv v1.0.7
   Compiling strsim v0.11.1
   Compiling ident_case v1.0.1
   Compiling num-traits v0.2.19
    Checking litemap v0.8.0
    Checking once_cell v1.21.3
    Checking bitflags v2.9.1
    Checking writeable v0.6.1
    Checking cfg-if v1.0.1
    Checking smallvec v1.15.1
    Checking http v1.3.1
   Compiling openssl-sys v0.9.109
   Compiling icu_properties_data v2.0.1
   Compiling icu_normalizer_data v2.0.0
    Checking log v0.4.27
   Compiling httparse v1.10.1
   Compiling openssl v0.10.73
    Checking percent-encoding v2.3.1
   Compiling heck v0.5.0
    Checking foreign-types-shared v0.1.1
    Checking foreign-types v0.3.2
    Checking http-body v1.0.1
   Compiling either v1.15.0
   Compiling native-tls v0.2.14
    Checking tower-service v0.3.3
    Checking try-lock v0.2.5
    Checking want v0.3.1
    Checking tracing-core v0.1.34
   Compiling unicase v2.8.1
    Checking openssl-probe v0.1.6
   Compiling hashbrown v0.15.4
   Compiling equivalent v1.0.2
   Compiling mime_guess v2.0.5
    Checking form_urlencoded v1.2.1
   Compiling psm v0.1.26
    Checking tracing v0.1.41
   Compiling erasable v1.3.0
    Checking sync_wrapper v1.0.2
   Compiling toml_write v0.1.2
   Compiling winnow v0.7.11
   Compiling libm v0.2.15
    Checking utf8_iter v1.0.4
   Compiling indexmap v2.10.0
    Checking ipnet v2.11.0
    Checking base64 v0.22.1
    Checking ryu v1.0.20
    Checking tower-layer v0.3.3
   Compiling serde_json v1.0.140
   Compiling getrandom v0.3.3
    Checking num-integer v0.1.46
    Checking http-body-util v0.1.3
   Compiling stacker v0.1.21
    Checking aho-corasick v1.1.3
   Compiling bigdecimal v0.4.8
   Compiling pq-sys v0.7.2
   Compiling rustversion v1.0.21
    Checking zeroize v1.8.1
   Compiling thiserror v2.0.12
    Checking regex-syntax v0.8.5
    Checking scopeguard v1.2.0
   Compiling unicode-xid v0.2.6
    Checking iri-string v0.7.8
    Checking mime v0.3.17
    Checking regex-automata v0.4.9
    Checking rustls-pki-types v1.12.0
    Checking num-bigint v0.4.6
   Compiling include_dir_macros v0.7.4
   Compiling synstructure v0.13.2
   Compiling darling_core v0.20.11
   Compiling diesel_table_macro_syntax v0.2.0
   Compiling proc-macro-error-attr2 v2.0.0
    Checking bytemuck v1.23.1
    Checking regex v1.11.1
   Compiling include_dir v0.7.4
    Checking rgb v0.8.51
    Checking uuid v1.17.0
   Compiling proc-macro-error2 v2.0.1
    Checking rc-box v1.3.0
    Checking chrono v0.4.41
   Compiling itertools v0.10.5
    Checking is-terminal v0.4.16
    Checking termcolor v1.4.1
    Checking takecell v0.1.1
    Checking byteorder v1.5.0
    Checking take_mut v0.2.2
    Checking colored v3.0.0
    Checking humantime v2.2.0
   Compiling serde_derive v1.0.219
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
   Compiling displaydoc v0.2.5
   Compiling tokio-macros v2.5.0
   Compiling futures-macro v0.3.31
   Compiling darling_macro v0.20.11
    Checking zerofrom v0.1.6
    Checking yoke v0.8.0
   Compiling openssl-macros v0.1.1
    Checking tokio v1.46.1
    Checking zerovec v0.11.2
    Checking zerotrie v0.2.2
   Compiling darling v0.20.11
    Checking futures-util v0.3.31
   Compiling serde_with_macros v3.14.0
    Checking tinystr v0.8.1
    Checking icu_locale_core v2.0.0
    Checking potential_utf v0.1.2
    Checking icu_collections v2.0.0
    Checking icu_provider v2.0.0
    Checking icu_normalizer v2.0.0
    Checking icu_properties v2.0.1
    Checking futures-executor v0.3.31
    Checking futures v0.3.31
   Compiling dsl_auto_type v0.1.3
   Compiling pin-project-internal v1.1.10
    Checking idna_adapter v1.2.1
    Checking idna v1.0.3
   Compiling derive_more-impl v1.0.0
   Compiling thiserror-impl v2.0.12
    Checking pin-project v1.1.10
    Checking serde_spanned v0.6.9
    Checking toml_datetime v0.6.11
    Checking serde_urlencoded v0.7.1
    Checking hyper v1.6.0
    Checking tower v0.5.2
    Checking tokio-native-tls v0.3.1
    Checking toml_edit v0.22.27
    Checking tower-http v0.6.6
    Checking tokio-util v0.7.15
    Checking hyper-util v0.1.15
    Checking url v2.5.4
    Checking serde_with v3.14.0
    Checking derive_more v1.0.0
   Compiling diesel_derives v2.2.6
    Checking hyper-tls v0.6.0
    Checking reqwest v0.12.22
    Checking tokio-stream v0.1.17
    Checking toml v0.8.23
    Checking dptree v0.5.1
    Checking migrations_internals v2.2.0
   Compiling aquamarine v0.6.0
    Checking env_logger v0.10.2
   Compiling teloxide-macros v0.10.0
   Compiling strum_macros v0.27.1
   Compiling heck v0.4.1
    Checking teloxide-core v0.13.0
   Compiling diesel-derive-enum v2.1.0
    Checking pretty_env_logger v0.5.0
   Compiling migrations_macros v2.2.0
    Checking strum v0.27.1
    Checking diesel v2.2.11
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.11/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

    Checking teloxide v0.17.0
For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
